--- a/nginx/wordpress.conf
+++ b/nginx/wordpress.conf
@@ -6,11 +6,9 @@ server {
     #access_log  /var/log/nginx/host.access.log  main;
 
     location / {
-        root   /usr/share/nginx/html;
+        root   /code;
         index  index.html index.htm;
     }
-
-    #error_page  404              /404.html;
 
     # redirect server error pages to the static page /50x.html
     #
@@ -24,9 +22,9 @@ server {
 ##nginx conf for redirecting to wordpress container
 server {
            listen 80;
-           server_name wordtest.com www.wordtest.com;
+           server_name mytestsite.com www.mytestsite.com;
            location / {
 
-                        proxy_pass http://172.17.0.3;
+                        proxy_pass http://web1;
            }
 }
