--- a/wordpress/Dockerfile
+++ b/wordpress/Dockerfile
@@ -1,4 +1,2 @@
 FROM wordpress
-COPY docroot/ /var/www/html/
-chown -R root.root /var/www/html/
-run service apache2 start
+run service apache2 restart
